# substrate2.0-erc721

./: Cargo.toml  README.md  nfts-defination.json  substrate-nft-design.docx
runtime/: Cargo.toml
runtime/src/: erc721.rs  lib.rs  nfts.rs  order.rs
