[package]
authors = ['Bryan Chen']
build = 'build.rs'
edition = '2018'
name = 'substrate-nfts'
version = '2.0.0'

[build-dependencies]
vergen = '3'

[workspace]
members = ['runtime']

[dependencies]
codec = { version = '1.0.6', package = 'parity-scale-codec' }
ctrlc = { version = '3.1', features = ['termination'] }
derive_more = '0.15.0'
exit-future = '0.1'
futures = '0.1'
log = '0.4'
parking_lot = '0.9.0'
tokio = '0.1'
trie-root = '0.15.2'

[dependencies.runtime]
path = 'runtime'
package = 'substrate-nfts-runtime'

[dependencies.aura]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.aura-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa-primitives'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[[bin]]
name = 'substrate-nfts'
path = 'src/main.rs'

[profile.release]
panic = 'unwind'
