[package]
authors = ['Bryan Chen']
edition = '2018'
name = 'substrate-nfts-runtime'
version = '2.0.0'

[features]
default = ['std']
no_std = []
std = [
  'codec/std',
  'client/std',
  'rstd/std',
  'runtime-io/std',
  'support/std',
  'balances/std',
  'assets/std',
  'generic_asset/std',
  'aura/std',
  'aura-primitives/std',
  'grandpa/std',
  'executive/std',
  'indices/std',
  'primitives/std',
  'sr-primitives/std',
  'randomness-collective-flip/std',
  'system/std',
  'timestamp/std',
  'sudo/std',
  'transaction-payment/std',
  'version/std',
  'serde',
  'safe-mix/std',
  'offchain-primitives/std',
  'substrate-session/std',
]

[build-dependencies]
wasm-builder-runner = { version = '1.0.4', package = 'substrate-wasm-builder-runner' }

[dependencies]
codec = { version = '1.0.6', package = 'parity-scale-codec', default-features = false, features = ['derive'] }
safe-mix = { version = '1.0', default-features = false }
serde = { version = '1.0', optional = true, features = ['derive'] }

[dependencies.aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-aura'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.aura-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.assets]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-assets'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.generic_asset]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-generic-asset'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'


[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-executive'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-grandpa'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain-primitives'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.randomness-collective-flip]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-randomness-collective-flip'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.substrate-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.transaction-payment]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-transaction-payment'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = '4a13f614cf66bf12d7f02f0d338e6f4e27389c48'
